# advent-cpp

./: .gitignore  README.md
y2015/: CMakeLists.txt
y2015/libs/: CMakeLists.txt
y2015/libs/day1/: CMakeLists.txt
y2015/libs/day1/include/D1_2015/: day1.hpp
y2015/libs/day1/src/: day1.cpp
y2015/libs/day1/test/: CMakeLists.txt  test.cpp
y2015/libs/day10/: CMakeLists.txt
y2015/libs/day10/include/D10_2015/: day10.hpp
y2015/libs/day10/src/: day10.cpp
y2015/libs/day10/test/: CMakeLists.txt  test.cpp
y2015/libs/day11/: CMakeLists.txt
y2015/libs/day11/include/D11_2015/: day11.hpp
y2015/libs/day11/src/: day11.cpp
y2015/libs/day11/test/: CMakeLists.txt  test.cpp
y2015/libs/day12/: CMakeLists.txt
y2015/libs/day12/include/D12_2015/: day12.hpp
y2015/libs/day12/src/: day12.cpp
y2015/libs/day12/test/: CMakeLists.txt  test.cpp
y2015/libs/day13/: CMakeLists.txt
y2015/libs/day13/include/D13_2015/: day13.hpp
y2015/libs/day13/src/: day13.cpp
y2015/libs/day13/test/: CMakeLists.txt  test.cpp
y2015/libs/day14/: CMakeLists.txt
y2015/libs/day14/include/D14_2015/: day14.hpp
y2015/libs/day14/src/: day14.cpp
y2015/libs/day14/test/: CMakeLists.txt  test.cpp
y2015/libs/day15/: CMakeLists.txt
y2015/libs/day15/include/D15_2015/: day15.hpp
y2015/libs/day15/src/: day15.cpp
y2015/libs/day15/test/: CMakeLists.txt  test.cpp
y2015/libs/day16/: CMakeLists.txt
y2015/libs/day16/include/D16_2015/: day16.hpp
y2015/libs/day16/src/: day16.cpp
y2015/libs/day16/test/: CMakeLists.txt  test.cpp
y2015/libs/day17/: CMakeLists.txt
y2015/libs/day17/include/D17_2015/: day17.hpp
y2015/libs/day17/src/: day17.cpp
y2015/libs/day17/test/: CMakeLists.txt  test.cpp
y2015/libs/day18/: CMakeLists.txt
y2015/libs/day18/include/D18_2015/: day18.hpp
y2015/libs/day18/src/: day18.cpp
y2015/libs/day18/test/: CMakeLists.txt  test.cpp
y2015/libs/day19/: CMakeLists.txt
y2015/libs/day19/include/D19_2015/: day19.hpp
y2015/libs/day19/src/: day19.cpp
y2015/libs/day19/test/: CMakeLists.txt  test.cpp
y2015/libs/day2/: CMakeLists.txt
y2015/libs/day2/include/D2_2015/: day2.hpp
y2015/libs/day2/src/: day2.cpp
y2015/libs/day2/test/: CMakeLists.txt  test.cpp
y2015/libs/day20/: CMakeLists.txt
y2015/libs/day20/include/D20_2015/: day20.hpp
y2015/libs/day20/src/: day20.cpp
y2015/libs/day20/test/: CMakeLists.txt  test.cpp
y2015/libs/day21/: CMakeLists.txt
y2015/libs/day21/include/D21_2015/: day21.hpp
y2015/libs/day21/src/: day21.cpp
y2015/libs/day21/test/: CMakeLists.txt  test.cpp
y2015/libs/day22/: CMakeLists.txt
y2015/libs/day22/include/D22_2015/: day22.hpp
y2015/libs/day22/src/: day22.cpp
y2015/libs/day22/test/: CMakeLists.txt  test.cpp
y2015/libs/day23/: CMakeLists.txt
y2015/libs/day23/include/D23_2015/: day23.hpp
y2015/libs/day23/src/: day23.cpp
y2015/libs/day23/test/: CMakeLists.txt  test.cpp
y2015/libs/day24/: CMakeLists.txt
y2015/libs/day24/include/D24_2015/: day24.hpp
y2015/libs/day24/src/: day24.cpp
y2015/libs/day24/test/: CMakeLists.txt  test.cpp
y2015/libs/day3/: CMakeLists.txt
y2015/libs/day3/include/D3_2015/: day3.hpp
y2015/libs/day3/src/: day3.cpp
y2015/libs/day3/test/: CMakeLists.txt  test.cpp
y2015/libs/day4/: CMakeLists.txt
y2015/libs/day4/include/D4_2015/: day4.hpp
y2015/libs/day4/src/: day4.cpp
y2015/libs/day4/test/: CMakeLists.txt  test.cpp
y2015/libs/day5/: CMakeLists.txt
y2015/libs/day5/include/D5_2015/: day5.hpp
y2015/libs/day5/src/: day5.cpp
y2015/libs/day5/test/: CMakeLists.txt  test.cpp
y2015/libs/day6/: CMakeLists.txt
y2015/libs/day6/include/D6_2015/: day6.hpp
y2015/libs/day6/src/: day6.cpp
y2015/libs/day6/test/: CMakeLists.txt  test.cpp
y2015/libs/day7/: CMakeLists.txt
y2015/libs/day7/include/D7_2015/: day7.hpp  improved.hpp  virtual.hpp
y2015/libs/day7/src/: day7.cpp  improved.cpp  virtual.cpp
y2015/libs/day7/test/: CMakeLists.txt  test.cpp  test_improved.cpp  test_virtual.cpp
y2015/libs/day8/: CMakeLists.txt
y2015/libs/day8/include/D8_2015/: day8.hpp
y2015/libs/day8/src/: day8.cpp
y2015/libs/day8/test/: CMakeLists.txt  test.cpp
y2015/libs/day9/: CMakeLists.txt
y2015/libs/day9/include/D9_2015/: day9.hpp
y2015/libs/day9/src/: day9.cpp
y2015/libs/day9/test/: CMakeLists.txt  test.cpp
y2015/libs/utils/: CMakeLists.txt
y2015/libs/utils/include/utils/: root.hpp
y2015/libs/utils/src/: root.cpp
y2015/libs/utils/test/: CMakeLists.txt  test.cpp
y2015/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
y2015/src/files/: day2.txt:Zone.Identifier  day9.txt:Zone.Identifier
